--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "prisma": "^3.9.2",
         "tailwindcss": "^3.0.19",
         "typescript": "4.5.5"
+    },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
     }
 }
