--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
         "react": "^18.0.0-rc.0",
         "react-dom": "^18.0.0-rc.0",
         "react-hook-form": "^7.27.1",
+        "remark-html": "^15.0.1",
+        "remark-parse": "^10.0.1",
         "swr": "^1.2.2",
-        "twilio": "^3.75.0"
+        "twilio": "^3.75.0",
+        "unified": "^10.1.2"
     },
     "devDependencies": {
         "@types/node": "17.0.16",
