refector db(add chatroom)  & stream

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "next start",
         "lint": "next lint",
         "studio": "npx prisma studio",
-        "connect": "pscale connect carrot-market"
+        "connect": "pscale connect carrot-market",
+        "push": "npx prisma dp push"
     },
     "dependencies": {
         "@prisma/client": "^3.9.2",
@@ -15,9 +16,9 @@
         "@tailwindcss/forms": "^0.4.0",
         "gray-matter": "^4.0.3",
         "iron-session": "^6.0.5",
-        "next": "^12.1.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "next": "^12.1.5-canary.4",
+        "react": "^18.0.0-rc.3",
+        "react-dom": "^18.0.0-rc.3",
         "react-hook-form": "^7.27.1",
         "remark-html": "^15.0.1",
         "remark-parse": "^10.0.1",
